# greenhouse_server

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.docker/: .env
.docker/nginx/: nginx.conf
alembic/: env.py
alembic/versions/: b212b2437f26_initial_schema.py
android-app/: README.md  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/greenhouse/provisioning/: ConfigurationActivity.kt  DeviceApiService.kt  DeviceInfo.kt  DeviceRepository.kt  MainActivity.kt  QRScannerActivity.kt  SetupCompleteActivity.kt  WifiConnectionManager.kt  WifiSetupActivity.kt
android-app/app/src/main/res/drawable/: gradient_background.xml  ic_error.xml  ic_greenhouse.xml  ic_info.xml  ic_launcher_foreground.xml  ic_qr_code.xml  ic_refresh.xml  ic_success_large.xml  ic_wifi.xml  info_background.xml  scan_frame.xml
android-app/app/src/main/res/layout/: activity_configuration.xml  activity_main.xml  activity_qr_scanner.xml  activity_setup_complete.xml  activity_wifi_setup.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
nodemcu/: QR_CODE_FORMAT.md  generate_qr.py  greenhouse_controller.ino
src/: __init__.py  config.py  controller.py  database.py  healthcheck.py  main.py  models.py
src/repositories/: __init__.py  alerts.py  devices.py  growth.py  sensors.py
src/routers/: alerts.py  control.py  devices.py  growth.py  sensors.py
static/: app.js  index.html  styles.css
