[tool.poetry]
name = "greenhouse"
version = "1.0.0"
description = "Сервер умной теплицы для клубники на базе NodeMCU"
authors = ["Oleg E <evstyunino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = { version = "^0.27.0", extras = ["standard"] }
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
apscheduler = "^3.10.4"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
