[tool.poetry]
name = "greenhouse"
version = "0.1.0"
description = ""
authors = ["Oleg E <evstyunino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.127.0"
uvicorn = "^0.40.0"
SQLAlchemy = "^2.0.45"
pydantic = "^2.12.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
